# py-ssimulacra2

./: LICENSE  LICENSE.txt  README.md  performance_benchmark.sh  pyproject.toml  test.sh
.github/workflows/: publish.yml
src/ssimulacra2/: __about__.py
ssimulacra2/: __init__.py  cli.py  ssimulacra2.py  utils.py
