[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssimulacra2"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Pacidus", email = "pacidus@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Pacidus/ssimulacra2#readme"
Issues = "https://github.com/Pacidus/ssimulacra2/issues"
Source = "https://github.com/Pacidus/ssimulacra2"

[tool.hatch.version]
path = "src/ssimulacra2/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ssimulacra2 tests}"

[tool.coverage.run]
source_pkgs = ["ssimulacra2", "tests"]
branch = true
parallel = true
omit = [
  "src/ssimulacra2/__about__.py",
]

[tool.coverage.paths]
ssimulacra2 = ["src/ssimulacra2", "*/ssimulacra2/src/ssimulacra2"]
tests = ["tests", "*/ssimulacra2/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
